build: install tailwindcss

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "vite": "^4.3.0"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
